# windows_system_error

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: win_error.h
src/: win_errc.cpp  win_error.cpp  win_error_category.cpp
src/private/: win_errc.h  win_error_category.h
test/: test_win_error.cpp
test/catch2/: catch.hpp
